Fix z-index clashes

--- a/nebula-components/components/_navbar.scss
+++ b/nebula-components/components/_navbar.scss
@@ -1,6 +1,6 @@
 .#{$nb-namespace}c-navbar {
   position: relative;
-  z-index: 1;
+  z-index: 2;
   height: $nb-navbar-height-collapsed;
   background-color: $nb-navbar-background-color;
 
